ch4 practice 2 of 2.txt
(base) C:\Users\JMC>ipython
Python 3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]
Type 'copyright', 'credits' or 'license' for more information
IPython 7.31.1 -- An enhanced Interactive Python. Type '?' for help.

In [1]: student = ('Sue',[89,94,85])

In [2]: student
Out[2]: ('Sue', [89, 94, 85])

In [3]: name, grades=student

In [4]: print(f'{name}: {grades}')
Sue: [89, 94, 85]

In [5]: import math

In [6]: math.sqrt(900)
Out[6]: 30.0

In [7]: math.fabs(-10)
Out[7]: 10.0

In [8]: import math

In [9]: ma<tab>
  File "<ipython-input-9-29119f0d17c8>", line 1
    ma<tab>
           ^
SyntaxError: invalid syntax


In [10]: %%markdown
    ...:
    ...:
<IPython.core.display.Markdown object>

In [11]: math.fabs?
Signature: math.fabs(x, /)
Docstring: Return the absolute value of the float x.
Type:      builtin_function_or_method

In [12]: def rectangle_area(length=2, width=3):
    ...:     return length*width
    ...:

In [13]: rectangle_area()
Out[13]: 6

In [14]: rectangle_area(10)
Out[14]: 30

In [15]: rectangle_area(10,5)
Out[15]: 50

In [16]: rectangle_area(width=5, length=10)
Out[16]: 50

In [17]: def average(*args):
    ...:     return sum(args) / len(args)
    ...:

In [18]: average(5,10)
Out[18]: 7.5

In [19]: average(5,10,15)
    ...:
    ...:
Out[19]: 10.0

In [20]: average(5,10,15,20)
Out[20]: 12.5

In [21]: grades = [88,75,96,55,83]

In [22]: average(*grades)
Out[22]: 79.4

In [23]: def caculate_product(*args):
    ...:     product=1
    ...:     for value in args:
    ...:         product*=value
    ...:     return product
    ...:

In [24]: calculate_product(10,20,30)
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
<ipython-input-24-fe896689ed85> in <module>
----> 1 calculate_product(10,20,30)

NameError: name 'calculate_product' is not defined

In [25]: def calculate_product(*args):
    ...:     product=1
    ...:     for value in args:
    ...:         product*=value
    ...:     return product
    ...:
    ...:

In [26]: calculate_product(10,20,30)
Out[26]: 6000

In [27]: calculate_product(*range(1,6,2))
Out[27]: 15

In [28]: s='Hello'

In [29]: s.lower()
Out[29]: 'hello'

In [30]: s.upper()
Out[30]: 'HELLO'

In [31]: s
Out[31]: 'Hello'

In [32]:

In [32]: x=7

In [33]: def access_global():
    ...:     print('x printed from access global:', x)
    ...:

In [34]: access_global()
x printed from access global: 7

In [35]: def try_tomodify_global():
    ...:     x=3.5
    ...:     print('x printed from try_to_modify_global:', x)
    ...:

In [36]: try_to_modify_global()
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
<ipython-input-36-bbbdb6bad333> in <module>
----> 1 try_to_modify_global()

NameError: name 'try_to_modify_global' is not defined

In [37]: def try_to_modify_global():
    ...:     x=3.5
    ...:     print('x printed from try_to_modify_global:', x)
    ...:
    ...:

In [38]: try_to_modify_global()
x printed from try_to_modify_global: 3.5

In [39]: x
Out[39]: 7

In [40]: def modify_global():
    ...:     global x
    ...:     x='hello'
    ...:     print('x printed from modify_global:', x)
    ...:

In [41]: modify_global()
x printed from modify_global: hello

In [42]: x
Out[42]: 'hello'

In [43]:

In [43]: sum=10+5

In [44]: sum
Out[44]: 15

In [45]: sum([10,5])
---------------------------------------------------------------------------
TypeError                                 Traceback (most recent call last)
<ipython-input-45-165e9d7b8b3a> in <module>
----> 1 sum([10,5])

TypeError: 'int' object is not callable

In [46]: from math importceil, floor
  File "<ipython-input-46-57a2777248f4>", line 1
    from math importceil, floor
              ^
SyntaxError: invalid syntax


In [47]: from math import ceil, floor

In [48]: ceil(10.)
Out[48]: 10

In [49]: ceil(10.3)
Out[49]: 11

In [50]: floor(10.7)
Out[50]: 10

In [51]:

In [51]: e='hello'

In [52]: from math import *

In [53]: e
Out[53]: 2.718281828459045

In [54]:

In [54]: import statistics as stats

In [55]: grades = [85,93,45,87,93]

In [56]: stats.mean(grades)
Out[56]: 80.6

In [57]: import numpy as np

In [58]:

In [58]: import decimal as dec

In [59]: dec.Decimal('2.5') ** 2
Out[59]: Decimal('6.25')

In [60]: x=7

In [61]: id(x)
Out[61]: 2338846632432

In [62]: id(x)
Out[62]: 2338846632432

In [63]: x = 7

In [64]: id(x)
Out[64]: 2338846632432

In [65]: def cube(number):
    ...:     print('id(number):', id(number))
    ...:     return number ** 3
    ...:

In [66]: cube(x)
id(number): 2338846632432
Out[66]: 343

In [67]:

In [67]: def cube(number):
    ...:     print('number is x:', number is x)
    ...:     return number ** 3
    ...:

In [68]: cube(x)
number is x: True
Out[68]: 343

In [69]: def cube(number):
    ...:     print('id(number) before modifying number:', id(number))
    ...:     number ** 3
    ...:     print('id(number) after modifying number:', id(number))
    ...:     return number
    ...:

In [70]: cube(x)
id(number) before modifying number: 2338846632432
id(number) after modifying number: 2338846632432
Out[70]: 7

In [71]: def cube(number):
    ...:     print('id(number) before modifying number:', id(number))
    ...:     number **= 3
    ...:     print('id(number) after modifying number:', id(number))
    ...:     return number
    ...:
    ...:

In [72]: cube(x)
id(number) before modifying number: 2338846632432
id(number) after modifying number: 2338944732912
Out[72]: 343

In [73]: print(f'x={x}; id(x) = {id(x)}')
x=7; id(x) = 2338846632432

In [74]:

In [74]: width=15.5

In [75]: print('id:', id(width), 'value:', width)
id: 2338951459632 value: 15.5

In [76]: width=width*3

In [77]: print('id:', id(width), 'value:', width)
id: 2338951460304 value: 46.5

In [78]:

In [78]: valkues=[1,2,3)
  File "<ipython-input-78-ed5a69127a6b>", line 1
    valkues=[1,2,3)
                  ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['


In [79]: sum(values)
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
<ipython-input-79-18d8022d321e> in <module>
----> 1 sum(values)

NameError: name 'values' is not defined

In [80]: values=[1,2,3]

In [81]: sum(values)
---------------------------------------------------------------------------
TypeError                                 Traceback (most recent call last)
<ipython-input-81-18d8022d321e> in <module>
----> 1 sum(values)

TypeError: 'int' object is not callable

In [82]: values = [1,2,3]

In [83]: sum(values)
---------------------------------------------------------------------------
TypeError                                 Traceback (most recent call last)
<ipython-input-83-18d8022d321e> in <module>
----> 1 sum(values)

TypeError: 'int' object is not callable

In [84]: import math'
  File "<ipython-input-84-cfc0a8f619ed>", line 1
    import math'
                ^
SyntaxError: EOL while scanning string literal


In [85]: import math

In [86]: sum(values)
---------------------------------------------------------------------------
TypeError                                 Traceback (most recent call last)
<ipython-input-86-18d8022d321e> in <module>
----> 1 sum(values)

TypeError: 'int' object is not callable

In [87]: values = [1,2,3]

In [88]: values
Out[88]: [1, 2, 3]

In [89]: values = [1, 2, 3]

In [90]: sum(values)
---------------------------------------------------------------------------
TypeError                                 Traceback (most recent call last)
<ipython-input-90-18d8022d321e> in <module>
----> 1 sum(values)

TypeError: 'int' object is not callable

In [91]:

In [91]: import statistics

In [92]: statistics.pvariance([1,3,4,2,6,5,3,4,5,2])
Out[92]: 2.25

In [93]: statistics.pstdev([1,3,4,2,6,5,3,4,5,2])
Out[93]: 1.5

In [94]: import math

In [95]: math.sqrt(statistics.pvariance([1,3,4,2,6,5,3,4,5,2]))
    ...:
    ...:
    ...:
    ...:
Out[95]: 1.5

In [96]:

In [96]:

In [96]: import statistics

In [97]: staistics.variance([1,3,4,2,6,5,3,4,5,2])
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
<ipython-input-97-9fc5d6d00246> in <module>
----> 1 staistics.variance([1,3,4,2,6,5,3,4,5,2])

NameError: name 'staistics' is not defined

In [98]: statistics.variance([1,3,4,2,6,5,3,4,5,2])
Out[98]: 2.5

In [99]: statistics.stdev([1,3,4,2,6,5,3,4,5,2])
Out[99]: 1.5811388300841898

In [100]:

















